[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csslo"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "CSSLO - A library for quantum error correction codes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "json5>=0.9.0",
    "matplotlib>=3.3.0",
    "notebook>=7.4.2",
    "numba>=0.50.0",
    "numpy>=1.20.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/CSSLO"
"Bug Tracker" = "https://github.com/yourusername/CSSLO/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = "-v --cov=csslo"

[tool.uv.sources]
csslo = { workspace = true }

[dependency-groups]
dev = [
    "csslo",
]
